# search-algorithms

./: README.md
map-colouring/: README.md  pyproject.toml
map-colouring/src/map_colouring/: color.py  fitness.py  graph.py  main.py  particle.py  pso.py  state.py
path-finding-and-sudoku/: README.md  pyproject.toml
path-finding-and-sudoku/src/: main.ipynb
path-finding-and-sudoku/src/path_finding/: PathFinding.ipynb
path-finding-and-sudoku/src/sudoku/: SudokuBoard.ipynb
