[tool.poetry]
name = "map_colouring"
version = "0.1.0"
description = ""
authors = ["Samir Nunes da Silva <samir.silva12342@gmail.com>"]
readme = "README.md"
packages = [{include = "map_colouring", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
networkx = "^3.4.2"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
